--- a/.htaccess
+++ b/.htaccess
@@ -1,5 +1,8 @@
+Options All -Indexes
+
 RewriteEngine On
 
+RewriteBase /heroproadmin/
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
 
