--- a/.htaccess
+++ b/.htaccess
@@ -1,7 +1,7 @@
 Options All -Indexes
 
 RewriteEngine On
-
+RewriteBase /heroproadmin/
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
 
